== Changelog ==

= 2.1.6 =
* Fixed: A problem where manual renewals/payments were not possible towards an existing subscription while using Checkout.
* Added: Support passing an MSN to our webhook API methods.

= 2.1.5 =
* Fixed: Always find subscription via the agreementId on a recurring agreement webhook. This fixes ending an agreement in the app once and for all, as the logic is now the same regardless of the agreement's age.
* Fixed: Charge webhooks were also using the external ids instead of the charge id, this could cause an error too.
* Fixed: Do not replace the billing email address of the user when the user is already signed in pre-Checkout.
* Added: A new filter for overriding which countries are supported by recurring Checkout: `woo_vipps_recurring_checkout_countries($countries, $order_id)`.

= 2.1.4 =
* Fixed: Actually fixed abandoned Checkout orders not being deleted this time.
* Fixed: Payments towards a failed renewal order are now possible.
* Fixed: When using Checkout it will no longer tell you that you already have a subscription when you haven't paid yet.

= 2.1.3 =
* Fixed: We were still using calls to `get_posts` a few places, which was incompatible with WooCommerce HPOS. This fixes gateway changes, in-app description updates, and in-app subscription cancellation for installations using HPOS.
* Fixed: Some payments that were cancelled quickly could get stuck in a "MobilePay payments are automatically captured" loop for merchants using MobilePay.
* Fixed: An issue where swapping gateways did not work for MobilePay merchants, because a certain URL was not whitelisted in wp_safe_redirect.

= 2.1.2 =
* Fixed: Cleaning up old cancelled orders that were initiated via Checkout now works as intended.
* Fixed: Old agreements that customers now cancelled in the Vipps or MobilePay apps are now cancelled properly in WooCommerce.
* Fixed: VAT is now properly shown when a subscription is switched to Vipps MobilePay.